--- a/CSS/fabricacao.css
+++ b/CSS/fabricacao.css
@@ -225,7 +225,7 @@ table#tabelaspec td {
 }
 
 table#tabelaspec td.ce {
-  color: #ffffff;
+  color: #000000;
   background-color: rgba(111, 202, 166, 0.2);
   vertical-align: top;
   font-weight: bold;
